# cmake-example

./: CMakeLists.txt  main.cpp
